Fix bug where form too small on Samsung mobile in landscape

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -359,7 +359,7 @@ hr {
         top: 5%;
         padding: 5px;
         width: 40%;
-        height: 60%;
+        height: 90%;
         font-size: 80%
     }
 
